--- a/Logstash/send_nginx_logs_to_elk/other_files/nginx.conf
+++ b/Logstash/send_nginx_logs_to_elk/other_files/nginx.conf
@@ -22,7 +22,7 @@ http {
                         '"RequestBody":"$request_body",'
                         '"ResponseStatus":"$status",'
                         '"Upstream":"$upstream_addr",'
-                        '"UpstreamPath":"$request_uri",'
+                        '"UpstreamPath":"$uri",'
                         '"UpstreamResponseTime":"$upstream_response_time"'
                 '}';
 
